# PharmaCore

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.hermes/plans/: 2026-04-20-pharmacore-master-plan.md
benchmarks/: results.json  run_benchmarks.py
docs/: promotion-posts.md  sparsification_report.md
examples/: quickstart.py
models/: ablation_results.json
models/chemberta-77m-sparse50/: config.json  sparsification_results.json  tokenizer.json  tokenizer_config.json
models/chemberta-zinc-sparse50/: README.md  sparsification_results.json  tokenizer.json
models/esm2-35m-sparse30/: sparsification_results.json
models/esm2-35m-sparse50/: README.md  config.json  sparsification_results.json  tokenizer_config.json
models/esm2-35m-sparse70/: sparsification_results.json
models/esm2-35m-sparse90/: sparsification_results.json
models/esm2-8m-sparse30/: sparsification_results.json
models/esm2-8m-sparse50/: README.md  config.json  sparsification_results.json  tokenizer_config.json
models/esm2-8m-sparse70/: sparsification_results.json
models/esm2-8m-sparse90/: sparsification_results.json
pharmacore/: __init__.py  cli.py
pharmacore/admet/: predictor.py  toxicity.py
pharmacore/audit/: __init__.py
pharmacore/core/: config.py  device.py  types.py
pharmacore/discovery/: __init__.py
pharmacore/docking/: scoring.py  vina.py
pharmacore/protein/: esm.py  (+1 more)
scripts/: ablation_study.py  demo.py  download_model.py  sparsify_esm2.py  sparsify_model.py  upload_to_hf.py
spaces/: app.py  requirements.txt
tests/: test_cli.py  test_integration.py
(+17 files in other folders)
